# ros2-jetson-uart-lcd-lidar

./: README.md  README_PL.md  requirements.txt
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: lcd_subscriber.py
